--- a/Woche 3/Marketing/index.html
+++ b/Woche 3/Marketing/index.html
@@ -8,7 +8,18 @@
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css" />
     <script src="main.js"></script>
 </head>
+
+
 <body>
+
+<header>
+<section class="teaser">
+    <h1>Das Leben ist zu kurz für <em style="color: #f35a5a">mehr als einen </em>Messenger</h1>
+    <p>Jeder von uns verwendet täglich mindestens 3 verschiedene Messenger. Wir finden: Das könnte so viel einfacher sein. Deshalb haben wir eine App entwickelt, die Deine gesamte Kommunikation zusammenführt.</p>
+</section>
+</header>
+
+
 <div class="mission">
     <h2>Unsere Mission:<em style="color: #f35a5a"> mehr Zeit für Dich</em></h2>
     <p>Jeder von uns kennt es: Man benutzt hauptsächlich Whatsapp, um mit seinen Freunden in Kontakt zu bleiben. Wichtige Informationen zum Studium erhält man hingegen auf Facebook. Die eigenen Eltern schreiben lieber SMS und der Chef nutzt immer noch E-Mails, weil er das schon seit 20 Jahren so macht. Alles ganz schön kompliziert.</p>
