--- a/Woche 3/Marketing/index.html
+++ b/Woche 3/Marketing/index.html
@@ -1,86 +1,95 @@
 <!DOCTYPE html>
-<html>
+<html lang="de">
 <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>OneChat - Der einzige Messenger, den du brauchst</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css" />
-    <script src="main.js"></script>
+	<meta charset="utf-8">
+	<title>OneChat – Der einzige Messenger, den du brauchst</title>
+	<link href="./assets/css/style.css" rel="stylesheet">
 </head>
-
-
 <body>
 
-<header>
-<section class="teaser">
-    <h1>Das Leben ist zu kurz für <em style="color: #f35a5a">mehr als einen </em>Messenger</h1>
-    <p>Jeder von uns verwendet täglich mindestens 3 verschiedene Messenger. Wir finden: Das könnte so viel einfacher sein. Deshalb haben wir eine App entwickelt, die Deine gesamte Kommunikation zusammenführt.</p>
-</section>
+<header class="hero-header">
+	<div class="hero-header__container">
+		<h1>Das Leben ist zu kurz für <em>mehr als einen</em> Messenger</h1>
+		<p>Jeder von uns verwendet täglich mindestens 3 verschiedene Messenger. Wir finden: Das könnte so viel einfacher sein. Deshalb haben wir eine App entwickelt, die Deine gesamte Kommunikation zusammenführt.</p>
+		<a class="button" href="#">OneChat für iOS</a>
+		<a class="button" href="#">OneChat für Android</a>
+	</div>
 </header>
 
-
-<div class="mission">
-    <h2>Unsere Mission:<em style="color: #f35a5a"> mehr Zeit für Dich</em></h2>
-    <p>Jeder von uns kennt es: Man benutzt hauptsächlich Whatsapp, um mit seinen Freunden in Kontakt zu bleiben. Wichtige Informationen zum Studium erhält man hingegen auf Facebook. Die eigenen Eltern schreiben lieber SMS und der Chef nutzt immer noch E-Mails, weil er das schon seit 20 Jahren so macht. Alles ganz schön kompliziert.</p>
-    <p>Doch das muss nicht so sein: Wir haben eine App entwickelt, die Deine gesamte Kommunikation zusammenführt – in einen einzigen übersichtlichen Chat. Damit Du Dir nie wieder Gedanken machen musst, wie Du Deine Freunde, Bekannten und Arbeitskollegen am besten erreichst.</p>
-</div>
-<div class="background">
-    <div class="action">
-    <h2>Jetzt kostenlos herunterladen</h2>
-    </div>
-</div>
-<section class="functions">
-    
-    <article class="function">
-        <div class="img">
-        <img src="assets/images/smartphone1.jpg">
-        </div>
-        <div class="text">
-        <h2>OneChat verbindet<br><em style="color: #f00">alle Deine Netzwerke</em></h2>
-        <p>OneChat verbindet sich problemlos mit allen Netzwerken, die Du nutzt. Dafür musst Du lediglich Deinen Namen und Dein Passwort eingeben. Mit Diensten, die nur Deine Handynummer benötigen (z.B. Whatsapp), verbindet sich OneChat sogar ganz automatisch. Danach kannst Du mit einer einzigen App alle Deine Freunde erreichen. Einfacher geht es wirklich nicht.</p>    
-        </div>
-    </article>
-
-    <article class="function">
-        <div class="text">
-        <h2>OneChat weiß, wie du<br><em style="color: #f00">Deine Freunde erreichst</em></h2>        
-        <p>OneChat fasst alle Nachrichten, die Du empfängst, in einem einzigen übersichtlichen Chat zusammen. Du siehst jederzeit, woher eine Nachricht kommt. Deine Antworten verschickt OneChat über ein Netzwerk Deiner Wahl. Wenn Du möchtest, wählt OneChat sogar den schnellsten Weg für Dich aus. Bequemer geht es wirklich nicht.</p>
-        </div>
-        <div class="img">
-        <img src="assets/images/smartphone2.jpg">
-        </div>
-    </article>
-
+<section class="about">
+	<h2 class="about__heading">Unsere Mission: <em>mehr Zeit für Dich</em></h2>
+	<p>Jeder von uns kennt es: Man benutzt hauptsächlich Whatsapp, um mit seinen Freunden in Kontakt zu bleiben. Wichtige Informationen zum Studium erhält man hingegen auf Facebook. Die eigenen Eltern schreiben lieber SMS und der Chef nutzt immer noch E-Mails, weil er das schon seit 20 Jahren so macht. Alles ganz schön kompliziert.</p>
+	<p>Doch das muss nicht so sein: Wir haben eine App entwickelt, die Deine gesamte Kommunikation zusammenführt – in einen einzigen übersichtlichen Chat. Damit Du Dir nie wieder Gedanken machen musst, wie Du Deine Freunde, Bekannten und Arbeitskollegen am besten erreichst.</p>
 </section>
 
-<section>
-
-    <h2>Was die Presse <em style="color:#f00">über OneChat sagt</em></h2>
-    <div class="press">
-    <article>
-        <img src="assets/images/techcrunch.svg">
-        <p>„Mit OneChat spare ich hier und da immer wieder einige Minuten. So bleibt mir am Ende des Tages mehr Zeit für meine Kinder. Grandios.“</p>
-    </article>
-    <article>
-        <img src="assets/images/theverge.svg">
-        <p>„Dank OneChat habe ich die Flut an Kurznachrichten und E-Mails, die mich täglich erreichen, endlich im Griff!“</p>
-    </article>
-    <article>
-        <img src="assets/images/tnw.svg">
-        <p>„E-Mails in einem Chat-Verlauf einzubinden, ist eine großartige Idee! Damit fällt das Antworten auf beiden Seiten viel leichter.“</p>
-    </article>
-    <article>
-        <img src="assets/images/wired.svg">
-        <p>„Leider wurden E-Mails immer noch nicht ganz abgeschafft. Mit OneChat sind sie aber endlich erträglich geworden.“</p>
-    </article>
-    <article>
-        <img src="assets/images/wsj.svg">
-        <p>„Wir setzen OneChat mittlerweile in der gesamten Redaktion ein. Die Slack-Integration ist einfach cool.“</p>
-    </article>
-</div>
-
+<section class="call-to-action">
+	<h2>Jetzt kostenlos herunterladen</h2>
+	<a class="button" href="#">OneChat für iOS</a>
+	<a class="button" href="#">OneChat für Android</a>
 </section>
+
+<section class="features">
+	<article class="features__container">
+		<div class="features__image">
+			<img src="images/smartphone1.jpg" alt="Smartphone mit OneChat-App und geöffnetem Chat-Verlauf: Der Besitzer verabredet sich mit Anna und Max für 20 Uhr, da er bis zu dieser Uhrzeit arbeiten muss">
+		</div>
+		<div class="features__content">
+			<h2>OneChat verbindet<br><em>alle Deine Netzwerke</em></h2>
+			<p>OneChat verbindet sich problemlos mit allen Netzwerken, die Du nutzt. Dafür musst Du lediglich Deinen Namen und Dein Passwort eingeben. Mit Diensten, die nur Deine Handynummer benötigen (z.B. Whatsapp), verbindet sich OneChat sogar ganz automatisch. Danach kannst Du mit einer einzigen App alle Deine Freunde erreichen. Einfacher geht es wirklich nicht.</p>
+		</div>
+	</article>
+	<article class="features__container">
+		<div class="features__image features__image--right">
+			<img src="images/smartphone2.jpg" alt="Smartphone mit OneChat-App und geöffnetem Chat-Verlauf: Der Besitzer weist Max darauf hin, dass er den Termin bereits mit Anna abgeklärt hat">
+		</div>
+		<div class="features__content">
+			<h2>OneChat weiß, wie Du<br><em>Deine Freunde erreichst</em></h2>
+			<p>OneChat fasst alle Nachrichten, die Du empfängst, in einem einzigen übersichtlichen Chat zusammen. Du siehst jederzeit, woher eine Nachricht kommt. Deine Antworten verschickt OneChat über ein Netzwerk Deiner Wahl. Wenn Du möchtest, wählt OneChat sogar den schnellsten Weg für Dich aus. Bequemer geht es wirklich nicht.</p>
+		</div>
+	</article>
+</section>
+
+<section class="press">
+	<h2 class="press__heading">Was die Presse <em>über OneChat sagt</em></h2>
+	<div class="press__container">
+		<article class="press__item">
+			<img class="press__logo" src="assets/images/wired.svg" alt="Wired Logo">
+			<blockquote class="press__blockquote">
+				„Mit OneChat spare ich hier und da immer wieder einige Minuten. So bleibt mir am Ende des Tages mehr Zeit für meine Kinder. Grandios.“
+			</blockquote>
+		</article>
+		<article class="press__item">
+			<img class="press__logo" src="assets/images/tnw.svg" alt="The Next Web Logo">
+			<blockquote class="press__blockquote">
+				„Dank OneChat habe ich die Flut an Kurznachrichten und E-Mails, die mich täglich erreichen, endlich im Griff!“
+			</blockquote>
+		</article>
+		<article class="press__item">
+			<img class="press__logo" src="assets/images/wsj.svg" alt="Wall Street Journal Logo">
+			<blockquote class="press__blockquote">
+				„E-Mails in einem Chat-Verlauf einzubinden, ist eine großartige Idee! Damit fällt das Antworten auf beiden Seiten viel leichter.“
+			</blockquote>
+		</article>
+		<article class="press__item">
+			<img class="press__logo" src="assets/images/techcrunch.svg" alt="Techcrunch Logo">
+			<blockquote class="press__blockquote">
+				„Leider wurden E-Mails immer noch nicht ganz abgeschafft. Mit OneChat sind sie aber endlich  erträglich geworden.“
+			</blockquote>
+		</article>
+		<article class="press__item">
+			<img class="press__logo" src="assets/images/theverge.svg" alt="The Verge Logo">
+			<blockquote class="press__blockquote">
+				„Wir setzen OneChat mittlerweile in der gesamten Redaktion ein. Die Slack-Integration ist einfach cool.“
+			</blockquote>
+		</article>
+	</div>
+</section>
+
+<footer>
+<div class="footer">
+	<p>© 2018 OneChat Ltd. – <a href="#">AGB</a>, <a href="#">Datenschutz</a>, <a href="#">Impressum</a></p>
 </div>
+</footer>
+
 </body>
 </html>
